oasp/oasp4j#232: removed context path and added a helpful comment what this file is about

--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -1,5 +1,11 @@
+# This is the spring boot configuration file for development. It will not be included into the application.
+# In order to set specific configurations in a regular installed environment create an according file
+# config/application.properties in the server. If you are deploying the application to a servlet container as untouched
+# WAR file you can locate this config folder in ${CATALINA_BASE}/lib. If you want to deploy multiple applications to
+# the same container (not recommended by default) you need to ensure the WARs are extracted in webapps folder and locate
+# the config folder inside the WEB-INF/classes folder of the webapplication.
+
 server.port=8081
-server.context-path=/oasp4j-sample-server
 http.mappers.jsonPrettyPrint=true
 security.basic.enabled=false
 
