enable cors preflight requests

--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.profiles.active=h2mem
 spring.application.name=restaurant
 server.context-path=/
 security.expose.error.details=false
+security.cors.enabled=false
 spring.jpa.hibernate.ddl-auto=validate
 #http://stackoverflow.com/questions/25283198/spring-boot-jpa-column-name-annotation-ignored
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
