Criteria API replaced with Querydsl and a new test added

--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -235,6 +235,25 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-ws</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.mysema.querydsl</groupId>
+      <artifactId>querydsl-apt</artifactId>
+      <version>3.4.3</version>
+     <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.mysema.querydsl</groupId>
+      <artifactId>querydsl-jpa</artifactId>
+      <version>3.7.1</version>
+    </dependency>
+
+    <dependency>
+     <groupId>org.slf4j</groupId>
+     <artifactId>slf4j-log4j12</artifactId>
+     <version>1.6.1</version>
+    </dependency>
   </dependencies>
 
   <build>
