#232 temporarily readded context path to application properties to fix issue with ANgular client

--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -6,6 +6,7 @@
 # the config folder inside the WEB-INF/classes folder of the webapplication.
 
 server.port=8081
+server.context-path=/oasp4j-sample-server
 http.mappers.jsonPrettyPrint=true
 security.basic.enabled=false
 
