--- a/templates/server/build.xml
+++ b/templates/server/build.xml
@@ -57,6 +57,7 @@
 
     <copy todir="${sample.core.sources.output}">
       <fileset dir="${sample.core.sources.input}">
+      	<exclude name="**/BeansBatchConfig.java"/>
         <exclude name="**/NamedQueries.java"/>
         <exclude name="*management"/>
         <exclude name="*management/*"/>
@@ -82,6 +83,7 @@
     <copy todir="${sample.core.resources.output}">
       <fileset dir="${sample.core.resources.input}">
         <exclude name="**/NamedQueries.xml"/>
+      	<exclude name="**/orm.xml"/>  <!--New -->
         <exclude name="db/**/*"/>
         <exclude name="**/error_de.properties"/>
         <exclude name="**/error_en.properties"/>
@@ -120,6 +122,7 @@
     <copy todir="${sample.core.test.resources.output}">
       <fileset dir="${sample.core.test.resources.input}">
         <exclude name="**/NamedQueries.xml"/>
+      	<exclude name="**/orm.xml"/> <!--New -->
         <exclude name="db/**/*"/>
         <exclude name="**/beans-test-service-rest.xml"/>
       </fileset>
