--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-# This is the configuration file shipped with the application that contains reasonable defaults
-# Environment specific configurations are configured in config/application.properties
+# This is the configuration file shipped with the application that contains reasonable defaults.
+# Environment specific configurations are configured in config/application.properties.
 # If you are running in a servlet container you may add this to lib/config/application.properties in case you do not
 # want to touch the WAR file.
 
 #server.port=8080
 spring.profiles.active=h2mem
 spring.application.name=restaurant
-server.context-path=/
+#server.context-path=/
+
 security.expose.error.details=false
 security.cors.enabled=false
 spring.jpa.hibernate.ddl-auto=validate
