#389: implemnted SpringBootBatchCommandLine and solved several config problems with batches

--- a/modules/batch/pom.xml
+++ b/modules/batch/pom.xml
@@ -40,6 +40,13 @@
       <artifactId>spring-batch-integration</artifactId>
     </dependency>
 
+	<!-- Spring Boot: Only needed if SpringBootBatchCommandLine is used -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
+      <optional>true</optional>
+    </dependency>
+
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.springframework.batch</groupId>
