sample application configured with mysql database

--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -120,9 +120,9 @@
     </dependency>
 
     <!-- Database -->
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
+   <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
     </dependency>
 
     <dependency>
