--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # want to touch the WAR file.
 
 #server.port=8080
-spring.profiles.active=h2mem
+spring.profiles.active=dbreal
 spring.application.name=restaurant
 #server.context-path=/
 
