--- a/modules/jpa/pom.xml
+++ b/modules/jpa/pom.xml
@@ -62,9 +62,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <scope>test</scope>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
     </dependency>
 
   </dependencies>
