--- a/modules/jpa/src/test/resources/config/app/application-default.properties
+++ b/modules/jpa/src/test/resources/config/app/application-default.properties
@@ -1,13 +1,13 @@
 # ---------------------------------------------------------------------------
 # Persistence and database
 # ---------------------------------------------------------------------------
-database.user.login = sa
-database.user.password =
-database.url = jdbc:h2:./target/.sample;INIT=create schema if not exists public
-database.hibernate.dialect = org.hibernate.dialect.H2Dialect
-database.datasource = org.h2.jdbcx.JdbcDataSource
+database.user.login = root
+database.user.password =root
+database.url = jdbc:mysql://localhost:3306/restaurant?user=root&password=root&connectTimeout=10000&socketTimeout=10000&autoReconnect=true
+database.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+database.datasource = javax.sql.DataSource
 database.hibernate.hbm2ddl.auto = create
-database.hibernate.show.sql = false
+database.hibernate.show.sql = true
 
 # Activate spring profiles
 #spring.profiles.active = integrationTest
