--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,11 @@
           <artifactId>flatten-maven-plugin</artifactId>
           <version>1.0.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.owasp</groupId>
+          <artifactId>dependency-check-maven</artifactId>
+          <version>1.3.6</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
