--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,19 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      
+      
       <!-- site generation settings -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
