#401: activate plugin only via profile to avoid general overhead, enable build breaker if CVSS >= 8

--- a/pom.xml
+++ b/pom.xml
@@ -123,19 +123,6 @@
           <workingDirectory>${basedir}</workingDirectory>
         </configuration>
       </plugin>
-
-      <plugin>
-        <groupId>org.owasp</groupId>
-        <artifactId>dependency-check-maven</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      
       
       <!-- site generation settings -->
       <plugin>
@@ -358,6 +345,27 @@
       <modules>
         <module>samples</module>
       </modules>
+    </profile>
+    <profile>
+      <id>security</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.owasp</groupId>
+            <artifactId>dependency-check-maven</artifactId>
+            <configuration>
+              <failBuildOnCVSS>8</failBuildOnCVSS>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>deploy</id>
