--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -107,6 +107,7 @@
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
         <scope>provided</scope>
       </dependency>
       <!-- Servlet Taglib -->
