#401: use check report for site as aggregate is buggy (report entirely empty)

--- a/pom.xml
+++ b/pom.xml
@@ -337,7 +337,9 @@
         <reportSets>
           <reportSet>
             <reports>
-              <report>aggregate</report>
+              <!-- https://github.com/jeremylong/DependencyCheck/issues/386-->
+              <!-- <report>aggregate</report> -->
+              <report>check</report>
             </reports>
           </reportSet>
         </reportSets>
