--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -239,6 +239,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-ws</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
