Removed delegation to RestTestClientBuilder through RestaurantWebIntegrationTest. Now, the RestTestClientBuilder is available through a getter and is set up in the super class.

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -10,3 +10,7 @@ flyway.clean-on-validation-error=true
 database.migration.auto=true
 database.migration.testdata=false
 database.migration.clean=false
+
+# Test configuration
+server.rest.test.user=waiter
+server.rest.test.password=waiter
