--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -258,6 +258,12 @@
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.6.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <version>1.3.0</version>
+    <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
