--- a/templates/server/src/main/resources/pom.xml
+++ b/templates/server/src/main/resources/pom.xml
@@ -23,6 +23,7 @@
     <module>${earProjectName}</module>
 #end
     <module>server</module>
+     <module>client</module>
   </modules>
 
   <dependencyManagement>
