added defaults to test application.properties and added migration scripts to for Tablemanagement tests

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -17,6 +17,5 @@ database.migration.clean=false
 # These login credentials are currently used in RestaurantWebIntegrationSubsystemTest base class
 server.rest.test.user=waiter
 server.rest.test.password=waiter
-server.rest.test.flyway.empty=0001
-server.rest.test.flyway.target=0004
 server.rest.test.flyway.baseline=0001
+server.rest.test.flyway.migration=0002
