--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -1,5 +1,6 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-embedded-servlet-containers.html#howto-user-a-random-unassigned-http-port
 server.port=0
+spring.profiles.active=junit
 
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
@@ -9,3 +10,7 @@ flyway.clean-on-validation-error=true
 database.migration.auto=true
 database.migration.testdata=false
 database.migration.clean=false
+
+# Test configuration
+server.rest.test.user=waiter
+server.rest.test.password=waiter
