Added example of proper usage and configuration of the RestaurantTestHelper and its database realted operations. IMPORTANT: set the following property either in application.properties or @TestPropertySource annotation to disable auto-migration using migration scripts in src/main/resources: database.migration.auto=false This only uses scripts as defined by flyway.locations proerty.

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -9,7 +9,7 @@ flyway.clean-on-validation-error=true
 #flyway.locations=db/migration,AllTests/setup/db
 
 # Flyway for setting up testdata in database
-database.migration.auto=true
+database.migration.auto=false
 database.migration.testdata=false
 database.migration.clean=false
 
@@ -17,5 +17,5 @@ database.migration.clean=false
 # These login credentials are currently used in RestaurantWebIntegrationSubsystemTest base class
 server.rest.test.user=waiter
 server.rest.test.password=waiter
-server.rest.test.flyway.baseline=0001
+server.rest.test.flyway.baseline=0000
 server.rest.test.flyway.migration=0002
