added functionality by accessing application.properties in batch job

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -9,3 +9,7 @@ flyway.clean-on-validation-error=true
 database.migration.auto=true
 database.migration.testdata=false
 database.migration.clean=false
+
+
+# Default values for job and step related properties
+chunk.size=2
