--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -259,6 +259,11 @@
       <version>1.6.1</version>
 
     </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-cypher-compiler-2.1</artifactId>
+      <version>2.1.8</version>
+    </dependency>
   </dependencies>
 
   <build>
