--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <java.version>1.7</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <oasp4j.version>2.1.0-SNAPSHOT</oasp4j.version>
+    <oasp4j.version>2.1.0</oasp4j.version>
     <port.range>81</port.range>
     <oasp.gpg.keyname>joerg.hohwiller@capgemini.com</oasp.gpg.keyname>
     <oasp.flatten.mode>oss</oasp.flatten.mode>
@@ -123,7 +123,7 @@
           <workingDirectory>${basedir}</workingDirectory>
         </configuration>
       </plugin>
-      
+
       <!-- site generation settings -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
