fixes usage of cobigen generated test data builder by excluding common.builders package

--- a/templates/server/build.xml
+++ b/templates/server/build.xml
@@ -104,6 +104,7 @@
         <exclude name="*management"/>
         <exclude name="*management/*"/>
         <exclude name="*management/**/*"/>
+        <exclude name="*common/builders/*"/>
         <!-- exclude application specific Money class and related classes -->
         <exclude name="**/*Money*.java"/>
       </fileset>
