Changes demanded in PR comments

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -15,7 +15,8 @@ database.migration.clean=false
 
 
 # Default values for job and step related properties
-chunk.size=2
+batch.staffimport.chunk.size=2
+batch.staffimport.skip.limit=1
 
 # Test configuration
 # These login credentials are currently used in RestaurantWebIntegrationSubsystemTest base class
