#457: improve testcase to prove the bug (test currently red)

--- a/modules/security/pom.xml
+++ b/modules/security/pom.xml
@@ -53,6 +53,11 @@
       <artifactId>jackson-databind</artifactId>
     </dependency>
 
+    <!-- Utilitiy -->
+    <dependency>
+      <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-util-core</artifactId>
+    </dependency>
 
     <!-- Test Dependencies -->
     <dependency>
