--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -20,6 +20,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <cxf.version>3.1.6</cxf.version>
+    <mmm.util.version>7.3.0</mmm.util.version>
     <oasp.gpg.keyname>joerg.hohwiller@capgemini.com</oasp.gpg.keyname>
     <oasp.flatten.mode>bom</oasp.flatten.mode>
   </properties>
@@ -27,6 +28,14 @@
   <dependencyManagement>
     <dependencies>
       <!-- *** EXTERNAL DEPENDENCIES *** -->
+      <!-- BOM for localization -->
+      <dependency>
+          <groupId>net.sf.m-m-m</groupId>
+        <artifactId>mmm-l10n-bom</artifactId>
+        <version>1.4.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <!-- JSR 250 for component/bean lifecycle management -->
       <dependency>
         <groupId>javax.annotation</groupId>
@@ -55,7 +64,37 @@
       <dependency>
         <groupId>net.sf.m-m-m</groupId>
         <artifactId>mmm-util-core</artifactId>
-        <version>7.0.0</version>
+        <version>${mmm.util.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.sf.m-m-m</groupId>
+        <artifactId>mmm-util-io</artifactId>
+        <version>${mmm.util.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.sf.m-m-m</groupId>
+        <artifactId>mmm-util-entity</artifactId>
+        <version>${mmm.util.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.sf.m-m-m</groupId>
+        <artifactId>mmm-util-pojo</artifactId>
+        <version>${mmm.util.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.sf.m-m-m</groupId>
+        <artifactId>mmm-util-validation</artifactId>
+        <version>${mmm.util.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.sf.m-m-m</groupId>
+        <artifactId>mmm-util-search</artifactId>
+        <version>${mmm.util.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.sf.m-m-m</groupId>
+        <artifactId>mmm-util-cli</artifactId>
+        <version>${mmm.util.version}</version>
       </dependency>
       <!-- Library with advanced collection support -->
       <dependency>
