--- a/modules/jpa/pom.xml
+++ b/modules/jpa/pom.xml
@@ -40,6 +40,10 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-util-search</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
