--- a/modules/rest/pom.xml
+++ b/modules/rest/pom.xml
@@ -41,7 +41,7 @@
     </dependency>
     <dependency>
       <groupId>net.sf.m-m-m</groupId>
-      <artifactId>mmm-util-core</artifactId>
+      <artifactId>mmm-util-validation</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
