test architecture applied in AbstractSpringBatchIntegrationTest and subclasses and AbstractGenericDaoTest. Issue #465 partly solved by restructuring locations of sql files.

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -5,6 +5,7 @@ spring.profiles.active=junit
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
+flyway.locations=filesystem:src/test/resources/db/default
 #the following line configures both src/test/resources and src/main/resources as locations for migration scripts
 #flyway.locations=db/migration,AllTests/setup/db
 
