DBIntegration-MS SQL

--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -4,13 +4,13 @@
 # want to touch the WAR file.
 
 #server.port=8080
-spring.profiles.active=h2mem
+spring.profiles.active=mssql
 spring.application.name=restaurant
 #server.context-path=/
 
 security.expose.error.details=false
 security.cors.enabled=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 #http://stackoverflow.com/questions/25283198/spring-boot-jpa-column-name-annotation-ignored
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 
