--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -1,6 +1,6 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-embedded-servlet-containers.html#howto-user-a-random-unassigned-http-port
 server.port=0
-spring.profiles.active=junit
+#spring.profiles.active=junit
 
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
@@ -9,9 +9,10 @@ flyway.clean-on-validation-error=true
 #flyway.locations=db/migration,AllTests/setup/db
 
 # Flyway for setting up testdata in database
-database.migration.auto=false
+database.migration.auto=true
 database.migration.testdata=false
-database.migration.clean=false
+database.migration.clean=true
+#database.hibernate.hbm2ddl.auto=none
 
 # Test configuration
 # These login credentials are currently used in RestaurantWebIntegrationSubsystemTest base class
