adding classifier to spring-boot-maven-plugin solves #477 and #405

--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -288,6 +288,9 @@
             <goals>
               <goal>repackage</goal>
             </goals>
+            <configuration>
+              <classifier>standalone</classifier>
+            </configuration>
           </execution>
         </executions>
       </plugin>
