--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -1,5 +1,7 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-embedded-servlet-containers.html#howto-user-a-random-unassigned-http-port
 server.port=0
+
+spring.profiles.active=mssql
 #spring.profiles.active=junit
 
 # Flyway for Database Setup and Migrations
@@ -13,6 +15,7 @@ database.migration.auto=true
 database.migration.testdata=false
 database.migration.clean=true
 #database.hibernate.hbm2ddl.auto=none
+flyway.baselineOnMigrate=false
 
 # Test configuration
 # These login credentials are currently used in RestaurantWebIntegrationSubsystemTest base class
