--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -1,8 +1,6 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-embedded-servlet-containers.html#howto-user-a-random-unassigned-http-port
 server.port=0
-
-spring.profiles.active=mssql
-#spring.profiles.active=junit
+spring.profiles.active=junit,mssql
 
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
@@ -11,11 +9,9 @@ flyway.clean-on-validation-error=true
 #flyway.locations=db/migration,AllTests/setup/db
 
 # Flyway for setting up testdata in database
-database.migration.auto=true
+database.migration.auto=false
 database.migration.testdata=false
-database.migration.clean=true
-#database.hibernate.hbm2ddl.auto=none
-flyway.baselineOnMigrate=false
+database.migration.clean=false
 
 # Test configuration
 # These login credentials are currently used in RestaurantWebIntegrationSubsystemTest base class
