--- a/samples/core/src/main/resources/config/application-mssql.properties
+++ b/samples/core/src/main/resources/config/application-mssql.properties
@@ -1,9 +1,9 @@
 spring.jpa.database=sqlserver
-spring.datasource.url=jdbc:sqlserver://10.77.116.22:1433;databaseName=test
+spring.datasource.url=jdbc:sqlserver://10.76.213.13:1433;databaseName=test
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2008Dialect
 spring.datasource.username=sa
 spring.datasource.password=Fountain123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 flyway.locations=classpath:db/migration/mssql,classpath:db/migration
 spring.jpa.properties.hibernate.globally_quoted_identifiers=false
-#flyway.locations=filesystem:src/main/resources/db/migration,filesystem:src/main/resources/db/migration/mssql
+#spring.jpa.show-sql=true
