--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -1,5 +1,9 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-embedded-servlet-containers.html#howto-user-a-random-unassigned-http-port
 server.port=0
+#Uncomment the following line in the case of in-memory database H2
+#spring.profiles.active=junit
+
+#Comment the following line in the case of database other than MS SQL Server 2008
 spring.profiles.active=junit,mssql
 
 # Flyway for Database Setup and Migrations
