--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -4,7 +4,11 @@
 # want to touch the WAR file.
 
 #server.port=8080
+
+#Uncomment the following profile 'h2mem' if the database used is in-memory database H2
 #spring.profiles.active=h2mem
+
+#Comment the following profile 'mssql' if the database used is MS SQL Server 2008
 spring.profiles.active=mssql
 spring.application.name=restaurant
 #server.context-path=/
