--- a/samples/core/src/main/resources/config/application-mssql.properties
+++ b/samples/core/src/main/resources/config/application-mssql.properties
@@ -1,9 +1,9 @@
 spring.jpa.database=sqlserver
-spring.datasource.url=jdbc:sqlserver://10.76.213.13:1433;databaseName=test
+spring.datasource.url=jdbc:sqlserver://10.76.208.103:1433;databaseName=test
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2008Dialect
 spring.datasource.username=sa
 spring.datasource.password=Fountain123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 flyway.locations=classpath:db/migration/mssql,classpath:db/migration
-spring.jpa.properties.hibernate.globally_quoted_identifiers=false
+#The following can be enabled in case of any errors in the SQL to investigate the issue by looking at SQL
 #spring.jpa.show-sql=true
