--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -260,12 +260,13 @@
 
     </dependency>
 
+    <!-- UnComment the following dependency if MS SQL Server 2008 database is used -->
+    <!--
     <dependency>
       <groupId>com.microsoft.sqlserver</groupId>
       <artifactId>sqljdbc</artifactId>
       <version>4.0</version>
-    </dependency>
-
+    </dependency> -->
     <dependency>
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
