#384: moved spring-boot-starter-web dependency from core to server. Kept  spring-boot-starter-web with scope provided in core.

--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -213,6 +213,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -238,6 +239,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-ws</artifactId>
+      <exclusions>
+      <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+        </exclusion></exclusions>
     </dependency>
 
     <dependency>
