changes in oasp4j pom.xml and template server pom.xml

--- a/templates/server/pom.xml
+++ b/templates/server/pom.xml
@@ -58,7 +58,7 @@
         <version>2.2</version>
       </extension>
     </extensions>
-
+<pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -117,6 +117,7 @@
         </executions>
       </plugin>
     </plugins>
+	</pluginManagement>
   </build>
 
 </project>
