--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -4,7 +4,12 @@
 # want to touch the WAR file.
 
 #server.port=8080
-spring.profiles.active=h2mem
+
+#Uncomment the following profile 'h2mem' if the database used is in-memory database H2
+#spring.profiles.active=h2mem
+
+#Comment the following profile 'postgre' if the database used is PostGre9.5.4
+spring.profiles.active=postgre
 spring.application.name=restaurant
 #server.context-path=/
 
