--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -1,6 +1,10 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-embedded-servlet-containers.html#howto-user-a-random-unassigned-http-port
 server.port=0
-spring.profiles.active=junit
+#Uncomment the following line in the case of in-memory database H2
+#spring.profiles.active=junit
+
+#Comment the following line in the case of database other than MS SQL Server 2008
+spring.profiles.active=junit,postgre
 
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
@@ -19,3 +23,5 @@ server.rest.test.user=waiter
 server.rest.test.password=waiter
 server.rest.test.flyway.baseline=0000
 server.rest.test.flyway.migration=0002
+
+#flyway.baselineOnMigrate=true
