--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -259,6 +259,12 @@
       <version>1.6.1</version>
 
     </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4.1208.jre7</version>
+    </dependency>
   </dependencies>
 
   <build>
