--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -240,10 +240,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-ws</artifactId>
       <exclusions>
-      <exclusion>
+        <exclusion>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
-        </exclusion></exclusions>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -269,7 +270,7 @@
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
       <version>1.3.0</version>
-    <scope>test</scope>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
