--- a/samples/core/src/main/resources/config/application-postgre.properties
+++ b/samples/core/src/main/resources/config/application-postgre.properties
@@ -1,9 +1,11 @@
 spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://10.77.79.6:5432/mydb?currentSchema=oasp4j
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://10.77.78.72:5432/mydb?currentSchema=oasp4j
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.datasource.username=postgres
 spring.datasource.password=Postgre_123
 spring.datasource.driver-class-name=org.postgresql.Driver
 flyway.locations=classpath:db/migration/postgre
 #The following can be enabled in case of any errors in the SQL to investigate the issue by looking at SQL
 #spring.jpa.show-sql=true
+#spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.DefaultComponentSafeNamingStrategy
+#hibernate.jdbc.use_streams_for_binary=true
