--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 #Uncomment the following profile 'h2mem' if the database used is in-memory database H2
 #spring.profiles.active=h2mem
 
-#Comment the following profile 'postgre' if the database used is PostGre9.5.4
+#Comment the following profile 'postgre' if the database used is PostGres 9.5.4
 spring.profiles.active=postgre
 spring.application.name=restaurant
 #server.context-path=/
