Added Documentation and commented the PostGre stuff and Uncommented H2 related stuff

--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -5,11 +5,11 @@
 
 #server.port=8080
 
-#Uncomment the following profile 'h2mem' if the database used is in-memory database H2
-#spring.profiles.active=h2mem
+#Comment the following profile 'h2mem' if the database used is other than in-memory database H2
+spring.profiles.active=h2mem
 
-#Comment the following profile 'postgre' if the database used is PostGres 9.5.4
-spring.profiles.active=postgre
+#UnComment the following profile 'postgre' if the database used is PostGres 9.5.4
+#spring.profiles.active=postgre
 spring.application.name=restaurant
 #server.context-path=/
 
