--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -1,6 +1,10 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-embedded-servlet-containers.html#howto-user-a-random-unassigned-http-port
 server.port=0
-spring.profiles.active=junit
+#Comment the following line in the case of database other than in-memory database H2
+#spring.profiles.active=junit
+
+#UnComment the following line in the case of PostGres 9.5.4 database
+spring.profiles.active=junit,orcl
 
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
