--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -265,6 +265,12 @@
       <version>1.3.0</version>
     <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.oracle.jdbc</groupId>
+      <artifactId>ojdbc7</artifactId>
+      <version>12.1.0.2</version>
+    </dependency>
   </dependencies>
 
   <build>
