--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -9,6 +9,7 @@ spring.profiles.active=junit,orcl
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
+flyway.validate-on-migrate=false
 #the following line configures both src/test/resources and src/main/resources as locations for migration scripts
 #flyway.locations=db/migration,AllTests/setup/db
 
@@ -23,3 +24,4 @@ server.rest.test.user=waiter
 server.rest.test.password=waiter
 server.rest.test.flyway.baseline=0000
 server.rest.test.flyway.migration=0002
+#flyway.baseline-on-migrate=true
