--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -266,11 +266,20 @@
     <scope>test</scope>
     </dependency>
 
+    <!--
     <dependency>
       <groupId>com.oracle.jdbc</groupId>
       <artifactId>ojdbc7</artifactId>
       <version>12.1.0.2</version>
     </dependency>
+    -->
+
+    <dependency>
+      <groupId>com.oracle</groupId>
+      <artifactId>ojdbc6</artifactId>
+      <version>11.2.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
