--- a/samples/core/src/main/resources/config/application-orcl.properties
+++ b/samples/core/src/main/resources/config/application-orcl.properties
@@ -1,6 +1,7 @@
 spring.jpa.database=oracle
-spring.datasource.url=jdbc:oracle:thin:@//10.77.19.15:1521/oasp4j
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+#spring.datasource.url=jdbc:oracle:thin:@//LIN34001298:1521/orcl
+spring.datasource.url=jdbc:oracle:thin:@//LIN34001298:1521/OASP4J
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.datasource.username=oasp4j
 spring.datasource.password=oasp4j
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
