DBIntegration with Oracle11g

--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -266,20 +266,14 @@
     <scope>test</scope>
     </dependency>
 
+    <!-- Uncomment the following dependency if the database used is Oracle 11g -->
     <!--
-    <dependency>
-      <groupId>com.oracle.jdbc</groupId>
-      <artifactId>ojdbc7</artifactId>
-      <version>12.1.0.2</version>
-    </dependency>
+      <dependency>
+        <groupId>com.oracle</groupId>
+        <artifactId>ojdbc6</artifactId>
+        <version>11.2.0</version>
+      </dependency>
     -->
-
-    <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>ojdbc6</artifactId>
-      <version>11.2.0</version>
-    </dependency>
-
   </dependencies>
 
   <build>
