--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -6,10 +6,10 @@
 #server.port=8080
 
 #Comment the following profile 'h2mem' if the database used is other than in-memory database H2
-#spring.profiles.active=h2mem
+spring.profiles.active=h2mem
 
-#UnComment the following profile 'orcl' if the database used is PostGres 9.5.4
-spring.profiles.active=orcl
+#UnComment the following profile 'orcl' if the database used is Oracle 11g
+#spring.profiles.active=orcl
 spring.application.name=restaurant
 #server.context-path=/
 
@@ -23,8 +23,3 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 # might otherwise lead to errors if job parameters are needed (or lead to unwanted modifications and longer startup times)
 # see http://stackoverflow.com/questions/22318907/how-to-stop-spring-batch-scheduled-jobs-from-running-at-first-time-when-executin
 spring.batch.job.enabled=false
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
-hibernate.globally_quoted_identifiers=true
-#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
