--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -4,7 +4,11 @@
 # want to touch the WAR file.
 
 #server.port=8080
+#Comment the following profile 'h2mem' if the database used is other than in-memory database H2
 spring.profiles.active=h2mem
+
+#UnComment the following profile 'orcl' if the database used is Oracle 11g
+#spring.profiles.active=orcl
 spring.application.name=restaurant
 #server.context-path=/
 
