--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -265,6 +265,13 @@
       <version>1.3.0</version>
     <scope>test</scope>
     </dependency>
+
+    <!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>1.5.4</version>
+    </dependency>
   </dependencies>
 
   <build>
