--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -5,10 +5,10 @@
 
 #server.port=8080
 #Comment the following profile 'h2mem' if the database used is other than in-memory database H2
-spring.profiles.active=h2mem
+#spring.profiles.active=h2mem
 
 #UnComment the following profile 'orcl' if the database used is Oracle 11g
-#spring.profiles.active=orcl
+spring.profiles.active=mysql
 spring.application.name=restaurant
 #server.context-path=/
 
@@ -22,3 +22,6 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 # might otherwise lead to errors if job parameters are needed (or lead to unwanted modifications and longer startup times)
 # see http://stackoverflow.com/questions/22318907/how-to-stop-spring-batch-scheduled-jobs-from-running-at-first-time-when-executin
 spring.batch.job.enabled=false
+spring.jpa.show-sql=true
+#flyway.baseline-on-migrate=true
+#flyway.baseline-version=0
