Fix pom.xml of oasp4j to make 'mvn site site:stage' work

--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,15 @@
     <servicedoc.port>80</servicedoc.port>
     <!-- oasp4j-sample should actually be restaurant -->
     <servicedoc.basePath>oasp4j-sample/services/rest</servicedoc.basePath>
-    <servicedocgen.version>1.0.0-beta-3</servicedocgen.version>    
+    <servicedocgen.version>1.0.0-beta-3</servicedocgen.version>
   </properties>
-
+  <dependencies>
+    <dependency>
+      <groupId>javax.interceptor</groupId>
+      <artifactId>javax.interceptor-api</artifactId>
+      <version>1.2</version>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
@@ -145,9 +151,9 @@
           <version>2.7</version>
         </plugin>
         <plugin>
-           <groupId>org.apache.maven.plugins</groupId>
-           <artifactId>maven-compiler-plugin</artifactId>
-           <version>3.2</version>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -205,7 +211,7 @@
           <version>2.9.1</version>
           <configuration>
             <!-- http://jira.codehaus.org/browse/MJAVADOC-308 -->
-            <!--<maxmemory>5048m</maxmemory>-->
+            <!--<maxmemory>5048m</maxmemory> -->
             <notree>true</notree>
             <show>private</show>
             <encoding>${project.reporting.outputEncoding}</encoding>
@@ -315,7 +321,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <!--<notree>true</notree>-->
+          <!--<notree>true</notree> -->
           <show>private</show>
           <encoding>${project.reporting.outputEncoding}</encoding>
           <charset>${project.build.sourceEncoding}</charset>
@@ -324,7 +330,7 @@
           <additionalparam>-Xdoclint:none</additionalparam>
           <links>
             <link>http://docs.oracle.com/javase/7/docs/api/</link>
-            <!--<link>http://oasp.github.io/oasp4j/maven/apidocs/</link>-->
+            <!--<link>http://oasp.github.io/oasp4j/maven/apidocs/</link> -->
           </links>
           <doctitle>JavaDocs for ${project.name}</doctitle>
           <windowtitle>JavaDocs for ${project.name}</windowtitle>
@@ -349,7 +355,7 @@
         <reportSets>
           <reportSet>
             <reports>
-              <!-- https://github.com/jeremylong/DependencyCheck/issues/386-->
+              <!-- https://github.com/jeremylong/DependencyCheck/issues/386 -->
               <!-- <report>aggregate</report> -->
               <report>check</report>
             </reports>
@@ -437,7 +443,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
             <configuration>
-            	<keyname>${oasp.gpg.keyname}</keyname>
+              <keyname>${oasp.gpg.keyname}</keyname>
             </configuration>
             <executions>
               <execution>
