--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -3,12 +3,10 @@
 # If you are running in a servlet container you may add this to lib/config/application.properties in case you do not
 # want to touch the WAR file.
 
-#server.port=8080
-#Comment the following profile 'h2mem' if the database used is other than in-memory database H2
-spring.profiles.active=h2mem
+#You can simply choose the DB of your choice by setting spring.profiles.active=XXX in config/application.properties
 
-#UnComment the following profile 'mysql' if the database used is MariaDB 10.0.27
-#spring.profiles.active=mysql
+#server.port=8080
+
 spring.application.name=restaurant
 #server.context-path=/
 
