Incorporated changes for Review Comments

--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -5,6 +5,7 @@
 # the same container (not recommended by default) you need to ensure the WARs are extracted in webapps folder and locate
 # the config folder inside the WEB-INF/classes folder of the webapplication.
 
+#You can simply choose the DB of your choice by setting spring.profiles.active=XXX in this application.properties
 server.port=8081
 server.context-path=/oasp4j-sample-server
 
@@ -14,3 +15,9 @@ security.basic.enabled=false
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
+
+#Comment the following profile 'h2mem' if the database used is other than in-memory database H2
+spring.profiles.active=h2mem
+
+#UnComment the following profile 'postgre' if the database used is PostGres 9.5.4
+#spring.profiles.active=postgre
