--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -3,13 +3,10 @@
 # If you are running in a servlet container you may add this to lib/config/application.properties in case you do not
 # want to touch the WAR file.
 
+#You can simply choose the DB of your choice by setting spring.profiles.active=XXX in config/application.properties
+
 #server.port=8080
 
-#Comment the following profile 'h2mem' if the database used is other than in-memory database H2
-spring.profiles.active=h2mem
-
-#UnComment the following profile 'mssql' if the database used is MS SQL Server 2008
-#spring.profiles.active=mssql
 spring.application.name=restaurant
 #server.context-path=/
 
