--- a/samples/core/src/main/resources/config/application-mssql.properties
+++ b/samples/core/src/main/resources/config/application-mssql.properties
@@ -1,5 +1,5 @@
 spring.jpa.database=sqlserver
-spring.datasource.url=jdbc:sqlserver://10.76.210.53:1433;databaseName=test
+spring.datasource.url=jdbc:sqlserver://10.77.100.77:1433;databaseName=restaurant
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2008Dialect
 spring.datasource.username=sa
 spring.datasource.password=Fountain123
