spring-boot-maven-plugin mainClass issue #503

--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -253,12 +253,12 @@
       <version>3.7.1</version>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.6.1</version>
 
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
