--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -6,6 +6,9 @@ spring.profiles.active=junit
 #UnComment the following line in the case of Oracle 11g database
 #spring.profiles.active=junit,orcl
 
+#UnComment the following line in the case of PostGres 9.5.4 database
+#spring.profiles.active=junit,postgre
+
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
