--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -23,3 +23,6 @@ spring.profiles.active=h2mem
 #UnComment the following profile 'orcl' if the database used is Oracle 11g
 #spring.profiles.active=orcl
 
+#UnComment the following profile 'mssql' if the database used is MS SQL Server 2008
+#spring.profiles.active=mssql
+
