Changes incorporated for the review comments by hohwille

--- a/samples/core/src/main/resources/config/application-postgres.properties
+++ b/samples/core/src/main/resources/config/application-postgres.properties
@@ -1,9 +1,11 @@
 spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://LIN34001298:5432/mydb?currentSchema=oasp4j
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-spring.datasource.username=postgres
-spring.datasource.password=Postgre_123
+# Fill in the values for spring.datasource.url, spring.datasource.username and 
+# spring.datasource.password below accordingly
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
-flyway.locations=classpath:db/migration/postgre
+flyway.locations=classpath:db/migration/postgres
 #The following can be enabled in case of any errors in the SQL to investigate the issue by looking at SQL
 #spring.jpa.show-sql=true
