--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -7,7 +7,7 @@ spring.profiles.active=junit
 #spring.profiles.active=junit,orcl
 
 #UnComment the following line in the case of PostGres 9.5.4 database
-#spring.profiles.active=junit,postgre
+#spring.profiles.active=junit,postgres
 
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
