Submit files that were submitted as part of PR#442 under a new branch under develop-2.3.0

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -18,10 +18,13 @@ database.migration.auto=false
 database.migration.testdata=false
 database.migration.clean=false
 
+# Default values for job and step related properties
+batch.staffimport.chunk.size=2
+batch.staffimport.skip.limit=1
+
 # Test configuration
 # These login credentials are currently used in RestaurantWebIntegrationSubsystemTest base class
 server.rest.test.user=waiter
 server.rest.test.password=waiter
 server.rest.test.flyway.baseline=0000
 server.rest.test.flyway.migration=0002
-#flyway.baseline-on-migrate=true
