Changes incorporated for the review comments from @amarinso

--- a/samples/core/src/main/resources/config/application-mysql.properties
+++ b/samples/core/src/main/resources/config/application-mysql.properties
@@ -1,8 +1,8 @@
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant?user=root&password=mariaDB&connectTimeout=10000&socketTimeout=10000&autoReconnect=true
+#spring.jpa.database=mysql
+#spring.datasource.url=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.username=root
-spring.datasource.password=mariaDB
+#spring.datasource.username=
+#spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 flyway.locations=classpath:db/migration,classpath:db/migration/mysql
 #The following can be enabled in case of any errors in the SQL to investigate the issue by looking at SQL
