--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -6,7 +6,7 @@ spring.profiles.active=junit
 #UnComment the following line in the case of Oracle 11g database
 #spring.profiles.active=junit,orcl
 
-#UnComment the following line in the case of Oracle 11g database
+#UnComment the following line in the case of MariaDB 10.0.27 database
 #spring.profiles.active=junit,mysql
 
 # Flyway for Database Setup and Migrations
