Changes for the review comments from PR #527 are incorporated in this PR as well

--- a/samples/core/src/main/resources/config/application-orcl.properties
+++ b/samples/core/src/main/resources/config/application-orcl.properties
@@ -1,9 +1,8 @@
-spring.jpa.database=oracle
-#spring.datasource.url=jdbc:oracle:thin:@//LIN34001298:1521/orcl
-spring.datasource.url=jdbc:oracle:thin:@//LIN34001298:1521/OASP4J
+#spring.jpa.database=oracle
+#spring.datasource.url=
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.datasource.username=oasp4j
-spring.datasource.password=oasp4j
+#spring.datasource.username=
+#spring.datasource.password=
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 flyway.locations=classpath:db/migration/orcl
 #The following can be enabled in case of any errors in the SQL to investigate the issue by looking at SQL
