--- a/samples/core/src/main/resources/config/application-mssql.properties
+++ b/samples/core/src/main/resources/config/application-mssql.properties
@@ -1,8 +1,8 @@
-spring.jpa.database=sqlserver
-spring.datasource.url=jdbc:sqlserver://LIN34001298:1433;databaseName=restaurant
+#spring.jpa.database=sqlserver
+#spring.datasource.url=
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2008Dialect
-spring.datasource.username=sa
-spring.datasource.password=Fountain123
+#spring.datasource.username=
+#spring.datasource.password=
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 flyway.locations=classpath:db/migration/mssql
 #The following can be enabled in case of any errors in the SQL to investigate the issue by looking at SQL
