--- a/samples/core/src/main/resources/config/application-orcl.properties
+++ b/samples/core/src/main/resources/config/application-orcl.properties
@@ -1,4 +1,4 @@
-#spring.jpa.database=oracle
+spring.jpa.database=oracle
 #spring.datasource.url=
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 #spring.datasource.username=
