--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -17,12 +17,14 @@ security.basic.enabled=false
 flyway.enabled=true
 flyway.clean-on-validation-error=true
 
+#UnComment the following profile 'mssql' if the database used is MS SQL Server 2008
+#spring.profiles.active=mssql
+
 #Comment the following profile 'h2mem' if the database used is other than in-memory database H2
 spring.profiles.active=h2mem
 
 #UnComment the following profile 'orcl' if the database used is Oracle 11g
 #spring.profiles.active=orcl
 
-#UnComment the following profile 'mssql' if the database used is MS SQL Server 2008
-#spring.profiles.active=mssql
-
+#UnComment the following profile 'postgres' if the database used is PostGres 9.5.4
+#spring.profiles.active=postgres
